STEP/STEPParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/Documents/Programming/STEP/STEP\STEP.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace STEP {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class STEPParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WHITESPACE=1, END_OF_LINE_COMMENT=2, MULTILINE_COMMENT=3, LPAREN=4, RPAREN=5, 
		LBRACK=6, RBRACK=7, ASSIGN=8, PLUS=9, MINUS=10, DIVIDE=11, MULT=12, POW=13, 
		GRTHAN=14, GRTHANEQ=15, LTHAN=16, LTHANEQ=17, EQ=18, NEQ=19, NEG=20, NL=21, 
		COMMA=22, NUMLITERAL=23, STRLITERAL=24, BOOLLITERAL=25, SETUP=26, ENDSETUP=27, 
		LOOP=28, ENDLOOP=29, FUNCTIONS=30, ENDFUNCTIONS=31, FUNCTION=32, ENDFUNCTION=33, 
		VARIABLES=34, ENDVARIABLES=35, BLANK=36, NUMBER=37, STRING=38, BOOLEAN=39, 
		IF=40, ENDIF=41, ELSE=42, CONTINUE=43, BREAK=44, REPEATWHILE=45, ENDWHILE=46, 
		REPEATFOR=47, ENDFOR=48, TO=49, CHANGEBY=50, SWITCH=51, ENDSWITCH=52, 
		WHEN=53, DO=54, FALLTHROUGH=55, OTHERWISEDO=56, RETURN=57, AND=58, OR=59, 
		CONSTANT=60, ID=61;
	public const int
		RULE_program = 0, RULE_setuploop = 1, RULE_setup = 2, RULE_loop = 3, RULE_variables = 4, 
		RULE_var_or_nl = 5, RULE_functions = 6, RULE_funcdcl = 7, RULE_funcdcl_or_nl = 8, 
		RULE_brackets = 9, RULE_params = 10, RULE_params_content = 11, RULE_params_multi = 12, 
		RULE_type = 13, RULE_stmt = 14, RULE_stmts = 15, RULE_loop_stmt = 16, 
		RULE_loop_stmts = 17, RULE_loopifbody = 18, RULE_ifstmt = 19, RULE_loopifstmt = 20, 
		RULE_whilestmt = 21, RULE_forstmt = 22, RULE_for_iter_opt = 23, RULE_assstmt = 24, 
		RULE_funccall = 25, RULE_params_options = 26, RULE_multi_expr = 27, RULE_retstmt = 28, 
		RULE_arrindex = 29, RULE_expr = 30, RULE_term = 31, RULE_factor = 32, 
		RULE_value = 33, RULE_constant = 34, RULE_logicexpr = 35, RULE_logicequal = 36, 
		RULE_logiccomp = 37, RULE_logiccompop = 38, RULE_logicvalue = 39, RULE_vardcl = 40, 
		RULE_var_options = 41, RULE_numdcl = 42, RULE_stringdcl = 43, RULE_booldcl = 44, 
		RULE_arrdcl = 45, RULE_arr_id_or_lit = 46, RULE_arrsizedcl = 47;
	public static readonly string[] ruleNames = {
		"program", "setuploop", "setup", "loop", "variables", "var_or_nl", "functions", 
		"funcdcl", "funcdcl_or_nl", "brackets", "params", "params_content", "params_multi", 
		"type", "stmt", "stmts", "loop_stmt", "loop_stmts", "loopifbody", "ifstmt", 
		"loopifstmt", "whilestmt", "forstmt", "for_iter_opt", "assstmt", "funccall", 
		"params_options", "multi_expr", "retstmt", "arrindex", "expr", "term", 
		"factor", "value", "constant", "logicexpr", "logicequal", "logiccomp", 
		"logiccompop", "logicvalue", "vardcl", "var_options", "numdcl", "stringdcl", 
		"booldcl", "arrdcl", "arr_id_or_lit", "arrsizedcl"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'('", "')'", "'['", "']'", "'='", "'+'", "'-'", 
		"'/'", "'*'", "'^'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!:'", "'!'", 
		null, "','", null, null, null, "'setup'", "'end setup'", "'loop'", "'end loop'", 
		"'functions'", "'end functions'", "'function'", "'end function'", "'variables'", 
		"'end variables'", "'blank'", "'number'", "'string'", "'boolean'", "'if'", 
		"'end if'", "'else'", "'continue'", "'break'", "'repeat while'", "'end while'", 
		"'repeat for'", "'end for'", "'to'", "'change by'", "'switch'", "'end switch'", 
		"'when'", "'do'", "'fallthrough'", "'otherwise do'", "'return'", "'and'", 
		"'or'", "'constant'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WHITESPACE", "END_OF_LINE_COMMENT", "MULTILINE_COMMENT", "LPAREN", 
		"RPAREN", "LBRACK", "RBRACK", "ASSIGN", "PLUS", "MINUS", "DIVIDE", "MULT", 
		"POW", "GRTHAN", "GRTHANEQ", "LTHAN", "LTHANEQ", "EQ", "NEQ", "NEG", "NL", 
		"COMMA", "NUMLITERAL", "STRLITERAL", "BOOLLITERAL", "SETUP", "ENDSETUP", 
		"LOOP", "ENDLOOP", "FUNCTIONS", "ENDFUNCTIONS", "FUNCTION", "ENDFUNCTION", 
		"VARIABLES", "ENDVARIABLES", "BLANK", "NUMBER", "STRING", "BOOLEAN", "IF", 
		"ENDIF", "ELSE", "CONTINUE", "BREAK", "REPEATWHILE", "ENDWHILE", "REPEATFOR", 
		"ENDFOR", "TO", "CHANGEBY", "SWITCH", "ENDSWITCH", "WHEN", "DO", "FALLTHROUGH", 
		"OTHERWISEDO", "RETURN", "AND", "OR", "CONSTANT", "ID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "STEP.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static STEPParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public STEPParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public STEPParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SetuploopContext setuploop() {
			return GetRuleContext<SetuploopContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(STEPParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(STEPParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariablesContext variables() {
			return GetRuleContext<VariablesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionsContext functions() {
			return GetRuleContext<FunctionsContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPVisitor<TResult> typedVisitor = visitor as ISTEPVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NL) {
				{
				{
				State = 96;
				Match(NL);
				}
				}
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==VARIABLES) {
				{
				State = 102;
				variables();
				}
			}

			State = 105;
			setuploop();
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==FUNCTIONS) {
				{
				State = 106;
				functions();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SetuploopContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SetupContext setup() {
			return GetRuleContext<SetupContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(STEPParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(STEPParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LoopContext loop() {
			return GetRuleContext<LoopContext>(0);
		}
		public SetuploopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_setuploop; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterSetuploop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitSetuploop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPVisitor<TResult> typedVisitor = visitor as ISTEPVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSetuploop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SetuploopContext setuploop() {
		SetuploopContext _localctx = new SetuploopContext(Context, State);
		EnterRule(_localctx, 2, RULE_setuploop);
		int _la;
		try {
			State = 137;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 109;
				setup();
				State = 113;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==NL) {
					{
					{
					State = 110;
					Match(NL);
					}
					}
					State = 115;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 116;
				loop();
				State = 120;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==NL) {
					{
					{
					State = 117;
					Match(NL);
					}
					}
					State = 122;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 123;
				setup();
				State = 127;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==NL) {
					{
					{
					State = 124;
					Match(NL);
					}
					}
					State = 129;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 130;
				loop();
				State = 134;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==NL) {
					{
					{
					State = 131;
					Match(NL);
					}
					}
					State = 136;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SetupContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SETUP() { return GetToken(STEPParser.SETUP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDSETUP() { return GetToken(STEPParser.ENDSETUP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public SetupContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_setup; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterSetup(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitSetup(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPVisitor<TResult> typedVisitor = visitor as ISTEPVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSetup(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SetupContext setup() {
		SetupContext _localctx = new SetupContext(Context, State);
		EnterRule(_localctx, 4, RULE_setup);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			Match(SETUP);
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << NUMBER) | (1L << STRING) | (1L << BOOLEAN) | (1L << IF) | (1L << REPEATWHILE) | (1L << REPEATFOR) | (1L << RETURN) | (1L << CONSTANT) | (1L << ID))) != 0)) {
				{
				{
				State = 140;
				stmt();
				}
				}
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 146;
			Match(ENDSETUP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LoopContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOOP() { return GetToken(STEPParser.LOOP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDLOOP() { return GetToken(STEPParser.ENDLOOP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public LoopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_loop; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterLoop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitLoop(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPVisitor<TResult> typedVisitor = visitor as ISTEPVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LoopContext loop() {
		LoopContext _localctx = new LoopContext(Context, State);
		EnterRule(_localctx, 6, RULE_loop);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 148;
			Match(LOOP);
			State = 152;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << NUMBER) | (1L << STRING) | (1L << BOOLEAN) | (1L << IF) | (1L << REPEATWHILE) | (1L << REPEATFOR) | (1L << RETURN) | (1L << CONSTANT) | (1L << ID))) != 0)) {
				{
				{
				State = 149;
				stmt();
				}
				}
				State = 154;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 155;
			Match(ENDLOOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariablesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLES() { return GetToken(STEPParser.VARIABLES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDVARIABLES() { return GetToken(STEPParser.ENDVARIABLES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Var_or_nlContext[] var_or_nl() {
			return GetRuleContexts<Var_or_nlContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Var_or_nlContext var_or_nl(int i) {
			return GetRuleContext<Var_or_nlContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(STEPParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(STEPParser.NL, i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variables; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterVariables(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitVariables(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPVisitor<TResult> typedVisitor = visitor as ISTEPVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariables(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariablesContext variables() {
		VariablesContext _localctx = new VariablesContext(Context, State);
		EnterRule(_localctx, 8, RULE_variables);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 157;
			Match(VARIABLES);
			State = 161;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << NUMBER) | (1L << STRING) | (1L << BOOLEAN) | (1L << CONSTANT))) != 0)) {
				{
				{
				State = 158;
				var_or_nl();
				}
				}
				State = 163;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 164;
			Match(ENDVARIABLES);
			State = 168;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NL) {
				{
				{
				State = 165;
				Match(NL);
				}
				}
				State = 170;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_or_nlContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VardclContext vardcl() {
			return GetRuleContext<VardclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL() { return GetToken(STEPParser.NL, 0); }
		public Var_or_nlContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_or_nl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterVar_or_nl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitVar_or_nl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPVisitor<TResult> typedVisitor = visitor as ISTEPVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVar_or_nl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Var_or_nlContext var_or_nl() {
		Var_or_nlContext _localctx = new Var_or_nlContext(Context, State);
		EnterRule(_localctx, 10, RULE_var_or_nl);
		try {
			State = 173;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUMBER:
			case STRING:
			case BOOLEAN:
			case CONSTANT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 171;
				vardcl();
				}
				break;
			case NL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 172;
				Match(NL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
